K8s/Manifests/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  template:
    metadata:
      name: ticket-backend
      labels:
        app: ticket-backend
    spec:
      containers:
        - name: ticket-backend
          image: jaga80155/ticket_backend:v1
          ports:
            - containerPort: 5000
  replicas: 2
  selector:
    matchLabels:
      app: ticket-backend
