K8s/Manifests/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    metadata:
      name: ticket-frontend
      labels:
        app: ticket-frontend
    spec:
      containers:
        - name: ticket-frontend
          image: jaga80155/ticket_frontend:v1
          ports:
            - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      app: ticket-frontend
